--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -1,3 +1,7 @@
 {
-  
+  "Empty Dashboard? Infinite Possibilities!": "Empty Dashboard? Infinite Possibilities!",
+  "Start Your First Annotation Project": "Start Your First Annotation Project",
+  "Read the Tutorial": "Read the Tutorial",
+  "Delete project": "Delete project",
+  "Rename project": "Rename project"
 }
