Localiziation: project home

--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -3,5 +3,9 @@
   "Start Your First Annotation Project": "Start Your First Annotation Project",
   "Read the Tutorial": "Read the Tutorial",
   "Delete project": "Delete project",
-  "Rename project": "Rename project"
+  "Rename project": "Rename project",
+
+  "Projects": "Projects",
+  "Create New Project": "Create New Project",
+  "Untitled Project": "Untitled Project"
 }
