--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -1,3 +1,11 @@
 {
-  
+  "Empty Dashboard? Infinite Possibilities!": "Leeres Dashboard? Unbegrenzte Möglichkeiten!",
+  "Start Your First Annotation Project": "Starte Dein Erstes Annotationsprojekt",
+  "Read the Tutorial": "Zum Tutorial",
+  "Delete project": "Projekt löschen",
+  "Rename project": "Projekt umbenennen",
+
+  "Projects": "Projekte",
+  "Create New Project": "Neues Projekt",
+  "Untitled Project": "Unbenanntes Projekt"
 }
