Dummy 'Project' home page

--- a/src/i18n/de/project-sidebar.json
+++ b/src/i18n/de/project-sidebar.json
@@ -1,6 +1,6 @@
 {
   "Home": "Home",
-  "Collaboration": "Mitglieder",
+  "Collaboration": "Projektteam",
   "Assignments": "Arbeitsaufträge",
   "Add Ons": "Add Ons",
   "Settings": "Einstellungen" 
