--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -7,5 +7,13 @@
 
   "Projects": "Projekte",
   "Create New Project": "Neues Projekt",
-  "Untitled Project": "Unbenanntes Projekt"
+  "Untitled Project": "Unbenanntes Projekt",
+
+  "Something went wrong": "Etwas ist schiefgelaufen",
+  "Could not create the project.": "Das Projekt konnte nicht erstellt werden.",
+  "Could not create the project (context failed).": "Projekt konnte nicht erstellt werden (Kontextfehler).",
+  "Could not delete the project.": "Das Projekt konnte nicht gelöscht werden.",
+
+  "We're working on it!": "Wir arbeiten dran!", 
+  "This feature will become available soon.": "Diese Funktion wird bald verfügbar sein."
 }
