--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -7,5 +7,13 @@
 
   "Projects": "Projects",
   "Create New Project": "Create New Project",
-  "Untitled Project": "Untitled Project"
+  "Untitled Project": "Untitled Project",
+
+  "Something went wrong": "Something went wrong",
+  "Could not create the project.": "Could not create the project.",
+  "Could not create the project (context failed).": "Could not create the project (context failed).",
+  "Could not delete the project.": "Could not delete the project.",
+
+  "We're working on it!": "We're working on it!", 
+  "This feature will become available soon.": "This feature will become available soon."
 }
