--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -1,5 +1,7 @@
 {
+  "Import Document": "Import Document",
   "Delete document": "Delete document",
+  "Rename document": "Rename document",
 
   "Something went wrong": "Something went wrong",
   "Could not create the document.": "Could not create the document."
