Feature: rename documents

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -4,5 +4,6 @@
   "Rename document": "Dokument umbenennen",
 
   "Something went wrong": "Etwas ist schiefgelaufen",
-  "Could not create the document.": "Das Dokument konnte nicht erstellt werden."
+  "Could not create the document.": "Das Dokument konnte nicht erstellt werden.",
+  "Could not rename the document.": "Das Dokument konnte nicht umbenannt werden."
 }
