Logout handler + localized error page

--- a/src/i18n/de/error.json
+++ b/src/i18n/de/error.json
@@ -1,4 +1,4 @@
 {
-  "Something went wrong.": "Serverfehler.",
+  "Something went wrong.": "Etwas ist schiefgelaufen.",
   "Nothing to see here.": "Hier gibt's nichts zu sehen." 
 }
