--- a/src/i18n/de/auth-login.json
+++ b/src/i18n/de/auth-login.json
@@ -6,7 +6,7 @@
   "Please enter a valid email address": "Ungültige Emailadresse",
   "Invalid email or password": "Email oder Passwort ungültig",
   "Sign In": "Einloggen",
-  "Forgot password?": "Password vergessen?",
+  "Forgot password?": "Passwort vergessen?",
   "OR": "ODER",
   "Continue with Magic Link": "Login mit Magischem Link",
   "Continue with SSO": "Login mit SSO",
