--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -1,7 +1,8 @@
 {
   "Empty Dashboard? Infinite Possibilities!": "Leeres Dashboard? Unbegrenzte Möglichkeiten!",
   "Start Your First Annotation Project": "Starte Dein Erstes Annotationsprojekt",
-  "Read the Tutorial": "Zum Tutorial",
+  "You have no annotation projects.": "Du hast noch keine Annotationsprojekte. Du kannst entweder ein eigenes Projekt starten oder über einen Einladungslink einem bestehenden Projekt beitreten.",
+  "Learn more.": "Hier erfährst Du mehr.",
   "Delete project": "Projekt löschen",
   "Rename project": "Projekt umbenennen",
 
