i18n for reply field placeholder

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -8,6 +8,9 @@
   "Private_Hint_01": "Annotationen die du im privaten Modus erstellst sind",
   "Private_Hint_02": "nur für Dich sichtbar.",
 
+  "Comment...": "Kommentar...",
+  "Reply...": "Antworten...",
+
   "Delete this annotation": "Annotation löschen",
   "Delete this comment": "Diesen Kommentar löschen",
   "Make this annotation public": "Diese Annotation öffentlich machen"
