Dropdown menu navigation + i18n

--- a/src/i18n/de/dashboard-sidebar.json
+++ b/src/i18n/de/dashboard-sidebar.json
@@ -2,5 +2,8 @@
   "Projects": "Projekte",
   "All projects": "Alle Projekte",
   "Preferences": "Einstellungen",
-  "Documentation": "Dokumentation"
+  "Profile Settings": "Profileinstellungen",
+  "Documentation": "Dokumentation",
+  "Help": "Hilfe",
+  "Sign out": "Logout"
 }
