--- a/src/i18n/en/dashboard-sidebar.json
+++ b/src/i18n/en/dashboard-sidebar.json
@@ -4,9 +4,11 @@
   "All projects": "All projects",
   "Account": "Account",
   "Preferences": "Preferences",
-  "Account Preferences": "Account Preferences",
+  "Profile Settings": "Profile Settings",
   "Notifications": "Notifications",
   "Documentation": "Documentation",
+  "Help": "Help",
+  "Sign out": "Sign out",
   "Tutorial": "Tutorial",
   "FAQ": "FAQ",
   "Logout": "Logout"
