--- a/src/i18n/en/dashboard-sidebar.json
+++ b/src/i18n/en/dashboard-sidebar.json
@@ -11,5 +11,6 @@
   "Sign out": "Sign out",
   "Tutorial": "Tutorial",
   "FAQ": "FAQ",
-  "Logout": "Logout"
+  "Logout": "Logout",
+  "No unread notifications": "No unread notifications"
 }
