--- a/src/i18n/de/dashboard-sidebar.json
+++ b/src/i18n/de/dashboard-sidebar.json
@@ -5,5 +5,6 @@
   "Profile Settings": "Profileinstellungen",
   "Documentation": "Dokumentation",
   "Help": "Hilfe",
-  "Sign out": "Logout"
+  "Sign out": "Logout",
+  "No unread notifications": "Keine ungelesenen Nachrichten"
 }
