More dashboard localization & cleanup

--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -1,13 +1,20 @@
 {
   "Empty Dashboard? Infinite Possibilities!": "Leeres Dashboard? Unbegrenzte Möglichkeiten!",
   "Start Your First Annotation Project": "Starte Dein Erstes Annotationsprojekt",
-  "You have no annotation projects.": "Du hast noch keine Annotationsprojekte. Starte ein eigenes Projekt, oder tritt über einen Einladungslink einem bestehenden Projekt bei.",
-  "Learn more.": "Hier erfährst Du mehr.",
+
+  "Projects": "Projekte",
+  "New Project": "Neues Projekt",
+  "Untitled Project": "Unbenanntes Projekt",
+
+  "All": "Alle",
+  "My Projects": "Meine Projekte",
+  "Shared with me": "Mit mir geteilt",
+
+  "Search": "Suche",
+  "Sort": "Sortieren",
+
   "Delete project": "Projekt löschen",
   "Rename project": "Projekt umbenennen",
-
-  "Create New Project": "Neues Projekt",
-  "Untitled Project": "Unbenanntes Projekt",
 
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Could not create the project.": "Das Projekt konnte nicht erstellt werden.",
