--- a/src/i18n/en/project-sidebar.json
+++ b/src/i18n/en/project-sidebar.json
@@ -1,5 +1,6 @@
 {
-  "Home": "Home",
+  "Projects": "Projects",
+  "Documents": "Documents",
   "Collaboration": "Collaboration",
   "Assignments": "Assignments",
   "Add Ons": "Add Ons",
