--- a/src/i18n/de/project-sidebar.json
+++ b/src/i18n/de/project-sidebar.json
@@ -1,5 +1,6 @@
 {
-  "Home": "Home",
+  "Projects": "Projekte",
+  "Documents": "Dokumente",
   "Collaboration": "Projektteam",
   "Assignments": "Arbeitsaufträge",
   "Add Ons": "Add Ons",
