UX: made document card clickable + added 'open' and 'open in new tab' menu options

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -3,6 +3,9 @@
   "Cancel": "Abbrechen",
 
   "Import Document": "Dokument Importieren",
+
+  "Open document": "Dokument öffnen",
+  "Open document in new tab": "In neuem Tab öffnen",
   "Delete document": "Dokument löschen",
   "Rename document": "Dokument umbenennen",
 
