--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -3,6 +3,9 @@
   "Cancel": "Cancel",
   
   "Import Document": "Import Document",
+  
+  "Open document": "Open document",
+  "Open document in new tab": "Open document in new tab",
   "Delete document": "Delete document",
   "Rename document": "Rename document",
 
