Fixes language DE->EN on project invite button

--- a/src/i18n/en/project-collaboration.json
+++ b/src/i18n/en/project-collaboration.json
@@ -8,7 +8,7 @@
   "Invite User to Project": "Invite User to Project",
   "Enter e-mail and access level.": "Enter e-mail and access level.",
   "E-Mail": "E-Mail",
-  "Send invitation": "Einladung abschicken",
+  "Send invitation": "Send invitation",
   "Confirm Remove User": "Confirm Remove User",
   "Remove_name": "Are you sure you want to remove ${name} from the project?",
   "Remove_anonymous": "Are you sure you want to remove this user from the project?",
