Minor dashboard UI tweaks

--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -5,6 +5,7 @@
   "Projects": "Projekte",
   "New Project": "Neues Projekt",
   "Untitled Project": "Unbenanntes Projekt",
+  "No description.": "Keine Projektbeschreibung.",
 
   "All": "Alle",
   "My Projects": "Meine Projekte",
