--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -5,6 +5,7 @@
   "Projects": "Projects",
   "New Project": "New Project",
   "Untitled Project": "Untitled Project",
+  "No description.": "No description.",
 
   "All": "All",
   "My Projects": "My Projects",
