Adds DE localization for 'Add Description' feature

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -1,6 +1,11 @@
 {
   "Ok": "Ok",
   "Cancel": "Abbrechen",
+  "Save": "Speichern",
+  "Clear": "Löschen",
+
+  "Add a project description": "Projektbeschreibung hinzufügen",
+  "Add a project description...": "Projektbeschreibung hinzufügen...",
 
   "Import Document": "Dokument Importieren",
 
