i18n for new collab table indicators

--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -3,6 +3,8 @@
   "Add a user": "Benutzer einladen",
   "Name": "Name",
   "Access Level": "Berechtigung",
+  "You": "Du",
+  "Owner": "Besitzer",
   "Project Admins": "Administrator",
   "Project Students": "Student",
   "Invite User to Project": "Benutzer Einladen",
