--- a/src/i18n/en/project-collaboration.json
+++ b/src/i18n/en/project-collaboration.json
@@ -3,6 +3,8 @@
   "Add a user": "Add a user",
   "Name": "Name",
   "Access Level": "Access Level",
+  "You": "You",
+  "Owner": "Owner",
   "Project Admins": "Administrator",
   "Project Students": "Student",
   "Invite User to Project": "Invite User to Project",
