Tweaks to 'Delete Member' dialog + alternative wording when attempting to delete yourself

--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -7,12 +7,17 @@
   "Owner": "Besitzer",
   "Project Admins": "Administrator",
   "Project Students": "Student",
+
   "Invite User to Project": "Benutzer Einladen",
   "Enter e-mail and access level.": "Bitte gib die E-mail Adresse und Berechtigungsstufe an.",
   "Send invitation": "Einladung abschicken",
+
   "Confirm Remove User": "Bist Du sicher?",
+  "Leave Project?": "Projekt Verlassen?",
+  "You are about to leave": "Diese Aktion kann nicht rückgängig gemacht werden. Wenn Du später wieder am Projekt teilnehmen willst, brauchst Du eine neue Einladung. Bist Du sicher dass Du das Projekt verlassen willst?",
   "Remove_name": "Bist Du sicher dass Du <strong>${name}</strong> aus dem Projekt entfernen willst?",
   "Remove_anonymous": "Sind sie sicher dass sie diesen Benutzer aus dem Projekt entfernen wollen?",
   "Remove": "Löschen",
+  "Yes, I want to leave": "Ja, Projekt verlassen",
   "Cancel": "Abbrechen"
 }
