--- a/src/i18n/en/project-collaboration.json
+++ b/src/i18n/en/project-collaboration.json
@@ -12,7 +12,7 @@
   "Enter e-mail and access level.": "Enter e-mail and access level.",
   "E-Mail": "E-Mail",
   "Send invitation": "Send invitation",
-  "You cannot send an invitation to yorself.": "We know it's good to feel wanted. But you cannot send an invitation to yorself.",
+  "You cannot send an invitation to yourself.": "We know it's good to feel wanted. But you cannot send an invitation to yourself.",
   "This user already has an invitation waiting.": "This user already has an invitation waiting.",
 
   "Confirm Remove User": "Confirm Remove User",
