--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -11,7 +11,7 @@
   "Invite User to Project": "Benutzer Einladen",
   "Enter e-mail and access level.": "Bitte gib die E-mail Adresse und Berechtigungsstufe an.",
   "Send invitation": "Einladung abschicken",
-  "You cannot send an invitation to yorself.": "Wir wissen, wie schön es ist, sich begehrt zu fühlen. Aber du kannst leider keine Einladung an dich selbst senden.",
+  "You cannot send an invitation to yourself.": "Wir wissen, wie schön es ist, sich begehrt zu fühlen. Aber du kannst leider keine Einladung an dich selbst senden.",
   "This user already has an invitation waiting.": "Auf diesen Benutzer wartet bereits eine Einladung.",
 
   "Confirm Remove User": "Bist Du sicher?",
