Handling anonymous users in the collaborators table

--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -7,6 +7,8 @@
   "Owner": "Besitzer",
   "Project Admins": "Administrator",
   "Project Students": "Student",
+  "Anonymous team member": "Anonymes Teammitglied",
+  "This user has not provided a name in his profile.": "Dieser Benutzer hat keinen Namen in seinem Profil angegeben.",
 
   "Invite User to Project": "Benutzer Einladen",
   "Enter e-mail and access level.": "Bitte gib die E-mail Adresse und Berechtigungsstufe an.",
