Anonymous team member: CSS tweaks + gender-neutral wording

--- a/src/i18n/de/project-collaboration.json
+++ b/src/i18n/de/project-collaboration.json
@@ -8,7 +8,7 @@
   "Project Admins": "Administrator",
   "Project Students": "Student",
   "Anonymous team member": "Anonymes Teammitglied",
-  "This user has not provided a name in his profile.": "Dieser Benutzer hat keinen Namen in seinem Profil angegeben.",
+  "This user has not provided a profile name.": "Dieses Teammitglied hat keinen Profilnamen angegeben.",
 
   "Invite User to Project": "Benutzer Einladen",
   "Enter e-mail and access level.": "Bitte gib die E-mail Adresse und Berechtigungsstufe an.",
