Gravatar integration: DE localization

--- a/src/i18n/de/dashboard-account.json
+++ b/src/i18n/de/dashboard-account.json
@@ -3,6 +3,8 @@
 
   "Your User Profile": "Dein Benutzerprofil",
   "E-Mail": "E-Mail",
+  "We found a Gravatar for your address.": "Wir haben einen Gravatar für Deine Addresse gefunden.",
+  "Use as my Avatar.": "Verwenden.",
 
   "Public Information": "Öffentliche Information",
   "Other users can see this information about you. All fields are optional.":
