--- a/src/i18n/en/dashboard-account.json
+++ b/src/i18n/en/dashboard-account.json
@@ -3,6 +3,8 @@
 
   "Your User Profile": "Your User Profile",
   "E-Mail": "E-Mail",
+  "We found a Gravatar for your address.": "We found a Gravatar for your address.",
+  "Use as my Avatar.": "Use as my Avatar.",
 
   "Public Information": "Public Information",
   "Other users can see this information about you. All fields are optional.":
