Working password reset form

--- a/src/i18n/de/auth-reset-password.json
+++ b/src/i18n/de/auth-reset-password.json
@@ -1,3 +1,11 @@
 {
-  
+  "Reset Password": "Passwort Zurücksetzen",
+  "Enter new password": "Neues Passwort",
+  "Confirm password": "Passwort bestätigen",
+  "Passwords don't match": "Passwörter sind nicht gleich",
+  "Password should be at least 6 characters": "Passwort muss mindestens 6 Zeichen lang sein",
+  "New password should be different from the old password.": "Neues Passwort muss sich vom alten unterscheiden.",
+  "Could not reset password": "Passwort konnte nicht zurückgesetzt werden",
+  "Password reset.": "Passwort erfolgreich zurückgesetzt.",
+  "Go to dashboard.": "Zum Dashboard."
 }
