--- a/src/i18n/de/auth-forgot-password.json
+++ b/src/i18n/de/auth-forgot-password.json
@@ -4,5 +4,6 @@
   "Your email": "Deine E-Mailadresse",
   "Request password reset": "Passwort zurücksetzen",
   "Link sent": "Falls Deine E-Mail in unserem System ist, erhälts Du in Kürze einen Link um dein Passwort zurückzusetzen.",
+  "Email rate limit exceeded": "Zuviele Anmeldeversuche",
   "Something went wrong": "Etwas ist schiefgelaufen"
 }
