Added missing error message label

--- a/src/i18n/en/auth-forgot-password.json
+++ b/src/i18n/en/auth-forgot-password.json
@@ -4,5 +4,6 @@
   "Your email": "Your email",
   "Request password reset": "Request password reset",
   "Link sent": "If your email is in our system, you will receive a password reset link shortly. Please check your inbox and spam folder.",
+  "Email rate limit exceeded": "Email rate limit exceeded",
   "Something went wrong": "Something went wrong"
 }
