Adds supported format hints to upload dropdown

--- a/src/i18n/de/project-home.json
+++ b/src/i18n/de/project-home.json
@@ -16,6 +16,7 @@
 
   "File upload": "Datei hochladen",
   "From IIIF manifest": "IIIF Manifest importieren",
+  "v2 or v3 image info.json": "v2 oder v3 image info.json",
   "Import IIIF": "IIIF Importieren",
   "Paste URL to a IIIF image manifest": "URL zu einem IIIF Bild-Manifest",
   "Please enter a valid IIIF manifest URL": "Bitte eine gültige IIIF Manifest URL eingeben",
