--- a/src/i18n/en/project-home.json
+++ b/src/i18n/en/project-home.json
@@ -16,6 +16,7 @@
 
   "File upload": "File upload",
   "From IIIF manifest": "From IIIF manifest",
+  "v2 or v3 image info.json": "v2 or v3 image info.json",
   "Import IIIF": "Import IIIF",
   "Paste URL to a IIIF image manifest": "Paste URL to a IIIF image manifest",
   "Please enter a valid IIIF manifest URL": "Please enter a valid IIIF manifest URL",
