--- a/src/i18n/de/dashboard-projects.json
+++ b/src/i18n/de/dashboard-projects.json
@@ -34,6 +34,7 @@
   "Something went wrong": "Etwas ist schiefgelaufen",
   "Could not create the project.": "Das Projekt konnte nicht erstellt werden.",
   "Could not delete the project.": "Das Projekt konnte nicht gelöscht werden.",
+  "Error saving project details": "Fehler beim Speichern der Projektdetails.",
 
   "We're working on it!": "Wir arbeiten dran!", 
   "This feature will become available soon.": "Diese Funktion wird bald verfügbar sein."
