--- a/src/i18n/en/dashboard-projects.json
+++ b/src/i18n/en/dashboard-projects.json
@@ -34,6 +34,7 @@
   "Something went wrong": "Something went wrong",
   "Could not create the project.": "Could not create the project.",
   "Could not delete the project.": "Could not delete the project.",
+  "Error saving project details": "Error saving project details.",
 
   "We're working on it!": "We're working on it!", 
   "This feature will become available soon.": "This feature will become available soon."
