Addes German localization

--- a/src/i18n/de/annotation-common.json
+++ b/src/i18n/de/annotation-common.json
@@ -14,5 +14,10 @@
   "Edit comment": "Kommentar bearbeiten",
   "Delete annotation": "Annotation löschen",
   "Delete comment": "Kommentar löschen",
-  "Make annotation public": "Diese Annotation öffentlich machen"
+  "Make annotation public": "Diese Annotation öffentlich machen",
+  "Save": "Speichern",
+  "Cancel": "Abbrechen",
+  "With Great Power...": "Aus großer Macht...",
+  "...comes great responsibility.": "...folgt große Verantwortung. Du kannst die Annotationen anderer Benutzer ändern weil Du Adminstrator-Rechte auf diesem Dokument hast. Nutze deine Befugnisse verantwortungsbewusst.",
+  "Proceed": "Weitermachen"
 }
